Add new msg and create msg events

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Welcome to Chat App!!</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
